:sparkles: App.tsx 추가

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,11 +7,6 @@
     <title>Plie</title>
   </head>
   <body>
-    <div id="root">
-      <img src="./assets/images/img_likeeat.png" />
-      <img src="./assets/images/img_plie.png" />
-      <div class="file"></div>
-      <div class="url"></div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
